new feature #2
* add month summary

* refactor all code

* update calendar

* update cost